--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -50,7 +50,7 @@
             <section id="cart__items">
              <!--  <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
                 <div class="cart__item__img">
-                  <img src="../../back/images/kanap01.jpeg" alt="Photographie d'un canapé" style="width: 50%; margin-left: 26%;">
+                  <img src="../../back/images/kanap01.jpeg" alt="Photographie d'un canapé">
                 </div>
                 <div class="cart__item__content">
                   <div class="cart__item__content__description">
